--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "yiisoft/yii2": "~2.0.14",
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-    "kartik-v/yii2-widget-datepicker": "dev-master"
+    "kartik-v/yii2-widget-datepicker": "dev-master",
+    "warrence/yii2-kartikgii": "dev-master"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
