--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
     "kartik-v/yii2-widget-datepicker": "dev-master",
+    "kartik-v/yii2-grid": "@dev",
     "warrence/yii2-kartikgii": "dev-master"
   },
   "require-dev": {
